refactor: Rename project from Trial+ to Marka+
Updates project name and references across package.json, metadata.json, Hero component, and TrialPlusWizard to reflect the rebranding from "Marka+ Trial+" to "Marka+". This includes:

- Changing the npm package name.
- Updating the application metadata name.
- Modifying the marketing copy in the Hero section.
- Removing unused payment-related state and logic from the TrialPlusWizard, and updating the donation link.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marka+-trial+-landing-page",
+  "name": "marka+-landing-page",
   "private": true,
   "version": "0.0.0",
   "type": "module",
