--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
-  "framework": "vite",
-  "outputDirectory": "dist"
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
+  "outputDirectory": "dist",
+  "framework": "vite"
 }
